Added eye for password hide and show for both login and register

--- a/src/public/register.html
+++ b/src/public/register.html
@@ -123,10 +123,22 @@
         </div>
         
         <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" required autocomplete="new-password" minlength="12">
-          <div class="password-hint">Minimum 6 characters</div>
-        </div>
+  <label for="password">Password</label>
+
+  <div class="password-input">
+    <input
+      type="password"
+      id="password"
+      required
+      autocomplete="new-password"
+      minlength="12"
+    />
+    <span class="eye-icon" id="togglePassword">👁️</span>
+  </div>
+
+  <div class="password-hint">Minimum 6 characters</div>
+</div>
+
         
         <button type="submit" class="btn-primary" id="registerBtn">
           Create Account
