--- a/src/public/login.html
+++ b/src/public/login.html
@@ -112,10 +112,19 @@
           <input type="email" id="email" required autocomplete="email">
         </div>
         
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" required autocomplete="current-password">
-        </div>
+       <div class="form-group">
+  <label for="password">Password</label>
+
+  <div class="password-input">
+    <input
+      type="password"
+      id="password"
+      required
+      autocomplete="current-password"
+    />
+    <span class="eye-icon" id="togglePassword">👁️</span>
+  </div>
+</div>
         
         <button type="submit" class="btn-primary" id="loginBtn">
           Login
